// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInputWithPrefix component change text value 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#F5F5F6",
        "borderColor": "#F5F5F6",
        "borderRadius": 12,
        "borderWidth": 1,
        "color": "#0E1216",
        "fontFamily": "PlusJakartaSans-Regular",
        "fontSize": 16,
        "height": 47,
        "lineHeight": 20,
        "paddingHorizontal": 15,
        "paddingVertical": 3,
      },
      false,
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <TextInput
    allowFontScaling={false}
    onBlur={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#A1A1A5"
    selectionColor="#FF502E"
    style={
      [
        {
          "color": "#0E1216",
          "flex": 1,
        },
        undefined,
      ]
    }
    testID="nativeInputText"
    value="test"
  />
</View>
`;

exports[`TextInputWithPrefix component with value 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#F5F5F6",
        "borderColor": "#F5F5F6",
        "borderRadius": 12,
        "borderWidth": 1,
        "color": "#0E1216",
        "fontFamily": "PlusJakartaSans-Regular",
        "fontSize": 16,
        "height": 47,
        "lineHeight": 20,
        "paddingHorizontal": 15,
        "paddingVertical": 3,
      },
      false,
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <TextInput
    allowFontScaling={false}
    onBlur={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#A1A1A5"
    selectionColor="#FF502E"
    style={
      [
        {
          "color": "#0E1216",
          "flex": 1,
        },
        undefined,
      ]
    }
    testID="nativeInputText"
    value="test"
  />
</View>
`;

exports[`TextInputWithPrefix component with value and prefix 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#F5F5F6",
        "borderColor": "#F5F5F6",
        "borderRadius": 12,
        "borderWidth": 1,
        "color": "#0E1216",
        "fontFamily": "PlusJakartaSans-Regular",
        "fontSize": 16,
        "height": 47,
        "lineHeight": 20,
        "paddingHorizontal": 15,
        "paddingVertical": 3,
      },
      false,
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <TextInput
    style={
      {
        "color": "#A1A1A5",
        "minWidth": 30,
        "paddingRight": 5,
      }
    }
    value="test"
  />
  <TextInput
    allowFontScaling={false}
    onBlur={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#A1A1A5"
    selectionColor="#FF502E"
    style={
      [
        {
          "color": "#0E1216",
          "flex": 1,
        },
        undefined,
      ]
    }
    testID="nativeInputText"
    value="test"
  />
</View>
`;

exports[`TextInputWithPrefix empty component 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#F5F5F6",
        "borderColor": "#F5F5F6",
        "borderRadius": 12,
        "borderWidth": 1,
        "color": "#0E1216",
        "fontFamily": "PlusJakartaSans-Regular",
        "fontSize": 16,
        "height": 47,
        "lineHeight": 20,
        "paddingHorizontal": 15,
        "paddingVertical": 3,
      },
      false,
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <TextInput
    allowFontScaling={false}
    onBlur={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#A1A1A5"
    selectionColor="#FF502E"
    style={
      [
        {
          "color": "#0E1216",
          "flex": 1,
        },
        undefined,
      ]
    }
    testID="nativeInputText"
  />
</View>
`;
